[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://src/game/ui/party/party_manager_ui.gd" id="1_party"]
[ext_resource type="Script" path="res://src/game/ui/party/components/barracks_component.gd" id="2_barracks"]
[ext_resource type="Script" path="res://src/game/ui/party/components/formation_grid_component.gd" id="3_grid"]
[ext_resource type="Script" path="res://src/game/ui/party/components/hero_details_component.gd" id="4_details"]
[ext_resource type="PackedScene" path="res://src/game/ui/party/components/InventorySelector.tscn" id="5_selector"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dark"]
bg_color = Color(0.08, 0.08, 0.08, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_all = 8

[node name="PartyManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_party")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.02, 1)

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Center" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="HBox/Center"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "TACTICAL FORMATION"
horizontal_alignment = 1

[node name="ColumnLabels" type="HBoxContainer" parent="HBox/Center"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label1" type="Label" parent="HBox/Center/ColumnLabels"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 10
text = "BACK"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBox/Center/ColumnLabels"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 10
text = "MID-B"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="HBox/Center/ColumnLabels"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "CENTER"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="HBox/Center/ColumnLabels"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "MID-F"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="HBox/Center/ColumnLabels"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "FRONT"
horizontal_alignment = 1

[node name="FormationArea" type="Panel" parent="HBox/Center"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="CenterContainer" type="CenterContainer" parent="HBox/Center/FormationArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="HBox/Center/FormationArea/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 5

[node name="RightPanel" type="Panel" parent="HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="Label" type="Label" parent="HBox/RightPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "HERO INSPECTOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="HBox/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StatsLabel" type="RichTextLabel" parent="HBox/RightPanel/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
bbcode_enabled = true
text = "[color=gray]Select a hero on the grid...[/color]"

[node name="HSeparator" type="HSeparator" parent="HBox/RightPanel/VBox"]
layout_mode = 2

[node name="EquipSlots" type="HBoxContainer" parent="HBox/RightPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="FooterButtons" type="VBoxContainer" parent="HBox/RightPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Save" type="Button" parent="HBox/RightPanel/FooterButtons"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "CONFIRM FORMATION"

[node name="Back" type="Button" parent="HBox/RightPanel/FooterButtons"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "BACK"

[node name="FormationGridComponent" type="Node" parent="." node_paths=PackedStringArray("grid_container")]
script = ExtResource("3_grid")
grid_container = NodePath("../HBox/Center/FormationArea/CenterContainer/Grid")

[node name="HeroDetailsComponent" type="Node" parent="." node_paths=PackedStringArray("stats_label", "slot_container")]
script = ExtResource("4_details")
stats_label = NodePath("../HBox/RightPanel/VBox/StatsLabel")
slot_container = NodePath("../HBox/RightPanel/VBox/EquipSlots")

[node name="InventorySelector" parent="." instance=ExtResource("5_selector")]
layout_mode = 1

[node name="BarracksComponent" type="Node" parent="."]
script = ExtResource("2_barracks")

[connection signal="pressed" from="HBox/RightPanel/FooterButtons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBox/RightPanel/FooterButtons/Back" to="." method="_on_back_pressed"]